--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-table": "^6.8.6",
+    "react-widgets": "^4.4.9",
+    "react-widgets-globalize": "^5.0.18",
+    "react-widgets-moment": "^4.0.25",
     "redux": "^4.0.1",
     "redux-form": "^7.4.2",
     "redux-logger": "^3.0.6",
@@ -47,6 +50,7 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1"
   }
