--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.0-beta.4",
     "react-dom": "^16.7.0",
+    "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-table": "^6.8.6",
@@ -49,6 +50,7 @@
     "glob": "^7.1.3",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "redux-devtools": "^3.5.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.28.4",
