--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/polyfill": "^7.2.5",
     "babel-loader": "^8.0.5",
     "bootstrap": "^4.2.1",
+    "cross-fetch": "^3.0.1",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "immutability-helper": "^3.0.0",
