--- a/package.json
+++ b/package.json
@@ -1,60 +1,60 @@
 {
-  "name": "annotation",
+  "name": "document_edo_acts",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "./node_modules/webpack/bin/webpack.js --progress --watch --color",
     "build": "NODE_ENV=1 PLATFORM=web ./node_modules/webpack/bin/webpack.js --progress -p --color"
   },
-  "author": "",
+  "author": "zreiby",
   "license": "ISC",
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
-    "babel-loader": "^8.0.5",
     "bootstrap": "^4.2.1",
-    "cross-fetch": "^3.0.1",
-    "css-loader": "^2.1.0",
-    "file-loader": "^3.0.1",
-    "immutability-helper": "^3.0.0",
-    "jquery": "^3.3.1",
+    "bootstrap-datepicker": "^1.7.1",
+    "bootstrap-daterangepicker": "^2.1.25",
+    "classnames": "2.2.5",
+    "immutability-helper": "^2.5.0",
+    "jquery": "3.1.1",
+    "jquery-contextmenu": "^2.6.3",
     "lodash": "^4.17.11",
-    "momentjs": "^2.0.0",
-    "open-iconic": "^1.1.1",
-    "react": "^16.7.0",
-    "react-bootstrap": "^1.0.0-beta.4",
-    "react-dom": "^16.7.0",
-    "react-redux": "^5.1.1",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-table": "^6.8.6",
-    "react-widgets": "^4.4.9",
-    "react-widgets-globalize": "^5.0.18",
-    "react-widgets-moment": "^4.0.25",
-    "redux": "^4.0.1",
-    "redux-form": "^7.4.2",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
-    "spin.js": "^4.0.0",
-    "sweetalert2": "^7.33.1"
+    "react": "15.4.2",
+    "react-bootstrap": "^0.31.5",
+    "react-context-menu": "^1.1.0",
+    "react-dom": "15.4.2",
+    "react-redux": "5.0.1",
+    "react-router": "^3.0.1",
+    "react-router-dom": "^5.0.0",
+    "react-scroll": "1.5.4",
+    "react-table": "^6.5.3",
+    "react-widgets": "^4.1.1",
+    "redux": "3.6.0",
+    "redux-form": "6.5.0",
+    "redux-thunk": "2.1.0",
+    "spin.js": "2.3.2",
+    "sweetalert2": "^7.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/preset-react": "^7.0.0",
-    "colors": "^1.3.3",
-    "es6-promise": "^4.2.5",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "glob": "^7.1.3",
+    "babel-core": "^6.26.3",
+    "babel-loader": "7.1.2",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-optimize": "^1.0.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "bitbar-webpack-progress-plugin": "^0.1.3",
+    "colors": "1.1.2",
+    "compression-webpack-plugin": "^1.0.0",
+    "css-loader": "0.28.7",
+    "es6-promise": "4.0.5",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "0.11.2",
+    "glob": "7.1.1",
     "less": "^3.9.0",
-    "less-loader": "^4.1.0",
-    "redux-devtools": "^3.5.0",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.2",
-    "webpack": "^4.28.4",
-    "webpack-cli": "^3.2.1"
+    "less-loader": "^4.0.5",
+    "style-loader": "0.13.1",
+    "webpack": "3.5.5"
   }
 }
