--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-bootstrap": "^0.31.5",
     "react-context-menu": "^1.1.0",
     "react-dom": "15.4.2",
-    "react-image-crop": "^6.0.18",
+    "react-image-annotation": "^0.9.9",
     "react-redux": "5.0.1",
     "react-router": "^3.0.1",
     "react-router-dom": "^5.0.0",
