--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "glob": "7.1.1",
     "less": "^3.9.0",
     "less-loader": "^4.0.5",
+    "react-images": "^1.0.0",
+    "react-photo-gallery": "^7.0.2",
     "style-loader": "0.13.1",
     "webpack": "3.5.5"
   }
