--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "redux-thunk": "2.1.0",
     "spin.js": "2.3.2",
     "sweetalert-react": "^0.4.11",
-    "sweetalert2": "^7.0.0"
+    "sweetalert2": "^7.0.0",
+    "video-react": "^0.14.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
