--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Django==2.1.7
+django-allauth==0.39.1
+django-extensions==2.2.1
 django-rest-knox==3.6.0
 djangorestframework==3.9.2
 factory-boy==2.11.1
